# cost-model-example

./: .editorconfig  .gitignore  README.md  poetry.toml  pyproject.toml
notebooks/: aws.ipynb
